# tensor_script

./: CMakeLists.txt  README.md
include/: exception.hpp  utils.hpp
include/tensor/: device.hpp  memory.hpp  ops.hpp  shape.hpp  tensor.hpp
src/: main.cpp
test/: CMakeLists.txt  test_tensor.cpp
